parser/generated/SASParser.py
# Generated from parser/SAS.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SASParser ( Parser ):

    grammarFileName = "SAS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'_null_'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "<INVALID>", "'>='", "'<='", 
                     "'<>'", "'>'", "'<'", "'='", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'%'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "','", "';'" ]

    symbolicNames = [ "<INVALID>", "DATA", "PROC", "RUN", "SET", "IF", "MEANS", 
                      "FREQ", "VAR", "INFILE", "INPUT", "CARDS", "DATALINES", 
                      "DELIMITER", "FIRSTOBS", "OBS", "ID_NULL", "MERGE", 
                      "BY", "DELETE", "DO", "END", "THEN", "ELSE", "PLUS", 
                      "MINUS", "STAR", "DIV", "RENAME", "GE", "LE", "NEQ", 
                      "GT", "LT", "EQ", "STRINGLITERAL", "STRING", "INT", 
                      "QuotedIdentifier", "Identifier", "COMMENT", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "WS", "PERCENT", "MACRO", "MEND", 
                      "LET", "PUT", "LPAREN", "RPAREN", "COMMA", "SEMI", 
                      "MACRO_VAR", "LIBNAME", "XLSX" ]

    RULE_parse = 0
    RULE_sas_stmt_block = 1
    RULE_data_stmt_block = 2
    RULE_libname_stmt = 3
    RULE_data_stmt_list = 4
    RULE_comment_stmt = 5
    RULE_rename_stmt = 6
    RULE_infile_stmt = 7
    RULE_file_specification = 8
    RULE_infile_options = 9
    RULE_input_stmt = 10
    RULE_set_stmt = 11
    RULE_condition = 12
    RULE_value = 13
    RULE_merge_stmt = 14
    RULE_by_stmt = 15
    RULE_assignment_stmt = 16
    RULE_delete_stmt = 17
    RULE_if_stmt = 18
    RULE_do_block = 19
    RULE_proc_stmt_block = 20
    RULE_proc_name = 21
    RULE_proc_options = 22
    RULE_proc_stmt_list = 23
    RULE_var_stmt = 24
    RULE_title_stmt = 25
    RULE_expression = 26
    RULE_relationalExpression = 27
    RULE_additiveExpression = 28
    RULE_multiplicativeExpression = 29
    RULE_atom = 30
    RULE_comparator = 31
    RULE_macro_definition = 32
    RULE_macro_call = 33
    RULE_macro_body = 34
    RULE_parameter_list = 35
    RULE_argument_list = 36
    RULE_name = 37

    ruleNames =  [ "parse", "sas_stmt_block", "data_stmt_block", "libname_stmt", 
                   "data_stmt_list", "comment_stmt", "rename_stmt", "infile_stmt", 
                   "file_specification", "infile_options", "input_stmt", 
                   "set_stmt", "condition", "value", "merge_stmt", "by_stmt", 
                   "assignment_stmt", "delete_stmt", "if_stmt", "do_block", 
                   "proc_stmt_block", "proc_name", "proc_options", "proc_stmt_list", 
                   "var_stmt", "title_stmt", "expression", "relationalExpression", 
                   "additiveExpression", "multiplicativeExpression", "atom", 
                   "comparator", "macro_definition", "macro_call", "macro_body", 
                   "parameter_list", "argument_list", "name" ]

    EOF = Token.EOF
    DATA=1
    PROC=2
    RUN=3
    SET=4
    IF=5
    MEANS=6
    FREQ=7
    VAR=8
    INFILE=9
    INPUT=10
    CARDS=11
    DATALINES=12
    DELIMITER=13
    FIRSTOBS=14
    OBS=15
    ID_NULL=16
    MERGE=17
    BY=18
    DELETE=19
    DO=20
    END=21
    THEN=22
    ELSE=23
    PLUS=24
    MINUS=25
    STAR=26
    DIV=27
    RENAME=28
    GE=29
    LE=30
    NEQ=31
    GT=32
    LT=33
    EQ=34
    STRINGLITERAL=35
    STRING=36
    INT=37
    QuotedIdentifier=38
    Identifier=39
    COMMENT=40
    LINE_COMMENT=41
    BLOCK_COMMENT=42
    WS=43
    PERCENT=44
    MACRO=45
    MEND=46
    LET=47
    PUT=48
    LPAREN=49
    RPAREN=50
    COMMA=51
    SEMI=52
    MACRO_VAR=53
    LIBNAME=54
    XLSX=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SASParser.EOF, 0)

        def sas_stmt_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SASParser.Sas_stmt_blockContext)
            else:
                return self.getTypedRuleContext(SASParser.Sas_stmt_blockContext,i)


        def getRuleIndex(self):
            return SASParser.RULE_parse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse" ):
                listener.enterParse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse" ):
                listener.exitParse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParse" ):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = SASParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 18033090207154182) != 0):
                self.state = 76
                self.sas_stmt_block()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 82
            self.match(SASParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sas_stmt_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_stmt_block(self):
            return self.getTypedRuleContext(SASParser.Data_stmt_blockContext,0)


        def proc_stmt_block(self):
            return self.getTypedRuleContext(SASParser.Proc_stmt_blockContext,0)


        def macro_definition(self):
            return self.getTypedRuleContext(SASParser.Macro_definitionContext,0)


        def macro_call(self):
            return self.getTypedRuleContext(SASParser.Macro_callContext,0)


        def libname_stmt(self):
            return self.getTypedRuleContext(SASParser.Libname_stmtContext,0)


        def comment_stmt(self):
            return self.getTypedRuleContext(SASParser.Comment_stmtContext,0)


        def getRuleIndex(self):
            return SASParser.RULE_sas_stmt_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSas_stmt_block" ):
                listener.enterSas_stmt_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSas_stmt_block" ):
                listener.exitSas_stmt_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSas_stmt_block" ):
                return visitor.visitSas_stmt_block(self)
            else:
                return visitor.visitChildren(self)




    def sas_stmt_block(self):

        localctx = SASParser.Sas_stmt_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sas_stmt_block)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.data_stmt_block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.proc_stmt_block()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.macro_definition()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.macro_call()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 88
                self.libname_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 89
                self.comment_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_stmt_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATA(self):
            return self.getToken(SASParser.DATA, 0)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(SASParser.SEMI)
            else:
                return self.getToken(SASParser.SEMI, i)

        def RUN(self):
            return self.getToken(SASParser.RUN, 0)

        def ID_NULL(self):
            return self.getToken(SASParser.ID_NULL, 0)

        def Identifier(self):
            return self.getToken(SASParser.Identifier, 0)

        def data_stmt_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SASParser.Data_stmt_listContext)
            else:
                return self.getTypedRuleContext(SASParser.Data_stmt_listContext,i)


        def getRuleIndex(self):
            return SASParser.RULE_data_stmt_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData_stmt_block" ):
                listener.enterData_stmt_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData_stmt_block" ):
                listener.exitData_stmt_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitData_stmt_block" ):
                return visitor.visitData_stmt_block(self)
            else:
                return visitor.visitChildren(self)




    def data_stmt_block(self):

        localctx = SASParser.Data_stmt_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_data_stmt_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(SASParser.DATA)
            self.state = 93
            _la = self._input.LA(1)
            if not(_la==16 or _la==39):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 94
            self.match(SASParser.SEMI)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 27023522179974704) != 0):
                self.state = 95
                self.data_stmt_list()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self.match(SASParser.RUN)
            self.state = 102
            self.match(SASParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Libname_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LIBNAME(self):
            return self.getToken(SASParser.LIBNAME, 0)

        def Identifier(self):
            return self.getToken(SASParser.Identifier, 0)

        def SEMI(self):
            return self.getToken(SASParser.SEMI, 0)

        def XLSX(self):
            return self.getToken(SASParser.XLSX, 0)

        def STRINGLITERAL(self):
            return self.getToken(SASParser.STRINGLITERAL, 0)

        def getRuleIndex(self):
            return SASParser.RULE_libname_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLibname_stmt" ):
                listener.enterLibname_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLibname_stmt" ):
                listener.exitLibname_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLibname_stmt" ):
                return visitor.visitLibname_stmt(self)
            else:
                return visitor.visitChildren(self)




    def libname_stmt(self):

        localctx = SASParser.Libname_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_libname_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(SASParser.LIBNAME)
            self.state = 105
            self.match(SASParser.Identifier)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35 or _la==55:
                self.state = 106
                _la = self._input.LA(1)
                if not(_la==35 or _la==55):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 109
            self.match(SASParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_stmt_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comment_stmt(self):
            return self.getTypedRuleContext(SASParser.Comment_stmtContext,0)


        def infile_stmt(self):
            return self.getTypedRuleContext(SASParser.Infile_stmtContext,0)


        def input_stmt(self):
            return self.getTypedRuleContext(SASParser.Input_stmtContext,0)


        def set_stmt(self):
            return self.getTypedRuleContext(SASParser.Set_stmtContext,0)


        def merge_stmt(self):
            return self.getTypedRuleContext(SASParser.Merge_stmtContext,0)


        def by_stmt(self):
            return self.getTypedRuleContext(SASParser.By_stmtContext,0)


        def assignment_stmt(self):
            return self.getTypedRuleContext(SASParser.Assignment_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(SASParser.If_stmtContext,0)


        def do_block(self):
            return self.getTypedRuleContext(SASParser.Do_blockContext,0)


        def rename_stmt(self):
            return self.getTypedRuleContext(SASParser.Rename_stmtContext,0)


        def delete_stmt(self):
            return self.getTypedRuleContext(SASParser.Delete_stmtContext,0)


        def libname_stmt(self):
            return self.getTypedRuleContext(SASParser.Libname_stmtContext,0)


        def getRuleIndex(self):
            return SASParser.RULE_data_stmt_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData_stmt_list" ):
                listener.enterData_stmt_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData_stmt_list" ):
                listener.exitData_stmt_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitData_stmt_list" ):
                return visitor.visitData_stmt_list(self)
            else:
                return visitor.visitChildren(self)




    def data_stmt_list(self):

        localctx = SASParser.Data_stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_data_stmt_list)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [40]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.comment_stmt()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.infile_stmt()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.input_stmt()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 114
                self.set_stmt()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 5)
                self.state = 115
                self.merge_stmt()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 6)
                self.state = 116
                self.by_stmt()
                pass
            elif token in [38, 39, 53]:
                self.enterOuterAlt(localctx, 7)
                self.state = 117
                self.assignment_stmt()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 8)
                self.state = 118
                self.if_stmt()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 9)
                self.state = 119
                self.do_block()
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 10)
                self.state = 120
                self.rename_stmt()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 11)
                self.state = 121
                self.delete_stmt()
                pass
            elif token in [54]:
                self.enterOuterAlt(localctx, 12)
                self.state = 122
                self.libname_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comment_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self):
            return self.getToken(SASParser.COMMENT, 0)

        def getRuleIndex(self):
            return SASParser.RULE_comment_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment_stmt" ):
                listener.enterComment_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment_stmt" ):
                listener.exitComment_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComment_stmt" ):
                return visitor.visitComment_stmt(self)
            else:
                return visitor.visitChildren(self)




    def comment_stmt(self):

        localctx = SASParser.Comment_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_comment_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(SASParser.COMMENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rename_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RENAME(self):
            return self.getToken(SASParser.RENAME, 0)

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SASParser.NameContext)
            else:
                return self.getTypedRuleContext(SASParser.NameContext,i)


        def EQ(self):
            return self.getToken(SASParser.EQ, 0)

        def SEMI(self):
            return self.getToken(SASParser.SEMI, 0)

        def getRuleIndex(self):
            return SASParser.RULE_rename_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRename_stmt" ):
                listener.enterRename_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRename_stmt" ):
                listener.exitRename_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRename_stmt" ):
                return visitor.visitRename_stmt(self)
            else:
                return visitor.visitChildren(self)




    def rename_stmt(self):

        localctx = SASParser.Rename_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_rename_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(SASParser.RENAME)
            self.state = 128
            self.name()
            self.state = 129
            self.match(SASParser.EQ)
            self.state = 130
            self.name()
            self.state = 131
            self.match(SASParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Infile_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INFILE(self):
            return self.getToken(SASParser.INFILE, 0)

        def file_specification(self):
            return self.getTypedRuleContext(SASParser.File_specificationContext,0)


        def SEMI(self):
            return self.getToken(SASParser.SEMI, 0)

        def infile_options(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SASParser.Infile_optionsContext)
            else:
                return self.getTypedRuleContext(SASParser.Infile_optionsContext,i)


        def getRuleIndex(self):
            return SASParser.RULE_infile_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInfile_stmt" ):
                listener.enterInfile_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInfile_stmt" ):
                listener.exitInfile_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInfile_stmt" ):
                return visitor.visitInfile_stmt(self)
            else:
                return visitor.visitChildren(self)




    def infile_stmt(self):

        localctx = SASParser.Infile_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_infile_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(SASParser.INFILE)
            self.state = 134
            self.file_specification()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 57344) != 0):
                self.state = 135
                self.infile_options()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 141
            self.match(SASParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class File_specificationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRINGLITERAL(self):
            return self.getToken(SASParser.STRINGLITERAL, 0)

        def CARDS(self):
            return self.getToken(SASParser.CARDS, 0)

        def DATALINES(self):
            return self.getToken(SASParser.DATALINES, 0)

        def getRuleIndex(self):
            return SASParser.RULE_file_specification

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_specification" ):
                listener.enterFile_specification(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_specification" ):
                listener.exitFile_specification(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFile_specification" ):
                return visitor.visitFile_specification(self)
            else:
                return visitor.visitChildren(self)




    def file_specification(self):

        localctx = SASParser.File_specificationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_file_specification)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 34359744512) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Infile_optionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DELIMITER(self):
            return self.getToken(SASParser.DELIMITER, 0)

        def EQ(self):
            return self.getToken(SASParser.EQ, 0)

        def STRINGLITERAL(self):
            return self.getToken(SASParser.STRINGLITERAL, 0)

        def FIRSTOBS(self):
            return self.getToken(SASParser.FIRSTOBS, 0)

        def INT(self):
            return self.getToken(SASParser.INT, 0)

        def OBS(self):
            return self.getToken(SASParser.OBS, 0)

        def getRuleIndex(self):
            return SASParser.RULE_infile_options

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInfile_options" ):
                listener.enterInfile_options(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInfile_options" ):
                listener.exitInfile_options(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInfile_options" ):
                return visitor.visitInfile_options(self)
            else:
                return visitor.visitChildren(self)




    def infile_options(self):

        localctx = SASParser.Infile_optionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_infile_options)
        try:
            self.state = 154
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.match(SASParser.DELIMITER)
                self.state = 146
                self.match(SASParser.EQ)
                self.state = 147
                self.match(SASParser.STRINGLITERAL)
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.match(SASParser.FIRSTOBS)
                self.state = 149
                self.match(SASParser.EQ)
                self.state = 150
                self.match(SASParser.INT)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 151
                self.match(SASParser.OBS)
                self.state = 152
                self.match(SASParser.EQ)
                self.state = 153
                self.match(SASParser.INT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Input_stmtContext(ParserRuleContext):
        __slots__ = 'parser'
